Testing GPG verified commit

--- a/docs/proposal/fvilchez.tex
+++ b/docs/proposal/fvilchez.tex
@@ -1,7 +1,7 @@
 \documentclass[]{article}
 \usepackage[numbers]{natbib}
 \usepackage{hyperref}
-% \usepackage{hypcap} 
+\usepackage{hypcap} 
 \usepackage{graphicx}
 \usepackage[margin=1.3in]{geometry}
 
