Project proposal draft

--- a/docs/proposal/fvilchez.tex
+++ b/docs/proposal/fvilchez.tex
@@ -1,7 +1,7 @@
 \documentclass[]{article}
 \usepackage[numbers]{natbib}
 \usepackage{hyperref}
-\usepackage{hypcap} 
+% \usepackage{hypcap} 
 \usepackage{graphicx}
 \usepackage[margin=1.3in]{geometry}
 
@@ -23,12 +23,22 @@
 \makeatother
 
 \newcommand{\course}{CSCE 790-002: Deep Reinforcement Learning and Search}
-\title{Musical Reinforcement Learning}
+\title{Musical Deep Reinforcement Learning}
 \author{Francisco Vilchez}
 
 \begin{document}
 
 \maketitle
+
+% Deep Reinforcement learning to music: \cite{deeprl2016music}
+
+% Google results (magenta): \cite{magenta2018}
+
+% Connectionist old explanation: \cite{connectionist1989}
+
+% RRN in music (blues): \cite{eck2002blues}
+
+% Evaluation is relative: \cite{biles2013lessons}
 
 \section*{Introduction}
 \input{Sections/Introduction}
@@ -42,8 +52,7 @@
 \section*{Conclusion}
 \input{Sections/Conclusion}
 
-\section*{References}
-\bibliographystyle{apalike}
+\bibliographystyle{ieeetr}
 \bibliography{fvilchez}
 
 \end{document}
