--- a/docs/proposal/Sections/Introduction.tex
+++ b/docs/proposal/Sections/Introduction.tex
@@ -1,1 +1,1 @@
-Hello World! \cite{45871} \citeauthor{vargas2015artificial}
+In this project we will try to solve the automated musical composition problem using Reinforcement Learning and Recurrent Neural Networks. Musical composition is an interesting problem in Computer Science since it deals with a big difficulty which is trying to teach a computer how to evaluate if a composition sounds good, and maybe even more difficult situation, which is to compare to musical melodies and decide which of the has a better sound. Because of that, automated musical composition requires the usage of innovative methods that try to get close to the way humans (or musicians) take decisions. Additionally, solving this problem with the usage of Reinforcement Learning will become an interesting solution since it will allow the interaction between the computer and humans in order to teach the computer which compositions sound good and that way improve its compositional skills. Finally, the broad amount of music genres, compositional measures, melodic and harmonic combination in a single instrument, and the combination of multiple instruments gives this problem a big scope for continuos improvement and the pursuit of a general model that can handle of the different scenarios that music can present.
