changing q-learning to monte carlo in proposal

--- a/docs/proposal/fvilchez.tex
+++ b/docs/proposal/fvilchez.tex
@@ -1,7 +1,8 @@
 \documentclass[]{article}
 \usepackage[numbers]{natbib}
 \usepackage{hyperref}
-% \usepackage{hypcap} 
+\hypersetup{colorlinks=true,allcolors=blue}
+\usepackage{hypcap} 
 \usepackage{graphicx}
 \usepackage[margin=1.3in]{geometry}
 
