Adding my previous paper as reference in approach for proposal

--- a/docs/proposal/fvilchez.bib
+++ b/docs/proposal/fvilchez.bib
@@ -46,3 +46,12 @@ booktitle	= {Joint Workshop on Machine Learning for Music (ICML)}
   year={2002},
   organization={IEEE}
 }
+
+@inproceedings{vilchez2015genetic,
+  title={Artificial musical pattern generation with genetic algorithms},
+  author={V{\'\i}lchez, Francisco and Fuster, Jose Astuvilca and Castan{\'o}n, C{\'e}sar Beltr{\'a}n},
+  booktitle={2015 Latin America Congress on Computational Intelligence (LA-CCI)},
+  pages={1--5},
+  year={2015},
+  organization={IEEE}
+}
