final report draft

--- a/docs/report/Sections/Conclusion.tex
+++ b/docs/report/Sections/Conclusion.tex
@@ -1,13 +1,3 @@
-We are expecting to complete the following changes in the future releases in order to improve our results:
+In this project we were able to apply Q-learning and Deep Q-learning in order to teach the computer an optimal policy for a sequence of musical notes. We created an note encoding method that allowed our algorithm to correctly manipulate musical notes, and proposed ideas in better encoding methods using relative values for improving this results. We defined and developed the components of a Reinforcement Learning algorithm in the musical composition environment. We create an automated reward process for testing and development purposes, and after that implemented the human-computer reward interaction process. A process for reproducing the results and getting feedback for the user was created in order to allow the fluid training process. We successfully applied Q-learning for learning an optimal policy in our musical environment, and later applied Deep Q-learning not getting as good results as with the plain Q-learning.
 
-\begin{itemize}
-  \item 11/8: Persist the \emph{(state, action)} values for future training. The matrix of values could be stored in a file for continuing the training later.
-  \item 11/15: Enable different durations for notes. We plan to include the duration of the note in the state.
-  \item 11/25: Finish project presentation and report.
-  \item Desirable: Start using relative values instead of the notes itself. We need to modify the values for our notes in our state based on a melodies tonality. The tonality initially will be an hyperparameter in our algorithm.
-  \item Desirable: Include \emph{chords} in the composition process. This will enable us to translate the notes based on the chord and not in the tonality hyperparameter. We are planning to include the chord as part of the state.
-  \item Desirable: Include Neural Network with our q-learning learning algorithm. The approach will follow the process from the assignments using PyTorch.
-  \item Desirable: Start using RNN and Monte Carlo for the learning process. More research will be necessary in order to determine the effort needed for this task.
-\end{itemize}
-
-Based on the progress done so far, we have been able to adapt the musical composition problem to a Reinforcement Learning scenario. We were able to use \emph{q-learning} in order to learn \emph{musical policies} that allow us to know which note should follow a previous sequence of notes. We were able to test how our algorithm learn based on the input provided by the user, and we included an automated test in order to verify that the algorithm was adequately learning the appropriate values for each \emph{(state, action)}. Finally, we detailed the future enhancements that we are planing to include for the future releases of our project with its respective methodology and that way improve the results that we are getting in order to get more pleasant melodies.
+We consider that improvements are still needed in the notes encoding for start storing for information about the notes, e.g. duration, tonality, harmonic progression, dynamics, instrument, etc. Additionally, more investigation is needed in the usage of Neural Networks for storing the transition values, since other techniques such as Recurrent Neural Networks could provide better results that the ones obtained. Finally, consider we could try to usage of previously validated melodies in order to speed up the training process and create some diversification of musical compositions in which we can base our training.
