--- a/docs/report/Sections/Related_Work.tex
+++ b/docs/report/Sections/Related_Work.tex
@@ -1,1 +1,7 @@
-The first approach analyzed for making this project was the one by \citeauthor{deeprl2016music} They proposed the usage of multiple deep Q-networks to store the rewards for each note and also for musical theory. That way, their algorithm will have the freedom to create melodies which are based on its experience, but will also take into consideration the different musical rules that will ``ensure'' that their compositions have a pleasant sound. Because of that, the reward function takes into consideration both, the rewards based on experience and the value according the musical rules. For both of them, and also for the target deep Q-network, \emph{Recurrent Neural Networks (RNN)} were used \cite{deeprl2016music}. The usage of \emph{RNN}s for the musical composition problem has been corroborated by \citeauthor{eck2002blues}, specifically with the usage of \emph{Long Short Term Memory (LSTM)} RRNs. As they mentioned, \emph{LSTM} is able to keep characteristics such as timing and musical structure while training, which was not possible with other type of models. They applied the solution to the \emph{blues} musical genre and obtained pleasant results according to their work \cite{eck2002blues}. Both proposals based their work on optimizing the best note that should follow a previous sequence of notes, which is considered the main goal in the musical composition problem \cite{connectionist1989}. Our project differs from these two principal approaches in three aspects. Firstly, the usage of musical theory is completely ignored, since we consider that, even though musical theory can explain why a melody sounds nice, it should not constraint the set of notes that can be used \cite{vilchez2015genetic} \cite{biles2013lessons}. Secondly, we will try to introduce a novel data structure which is based on the note's grades instead of storing a note itself (more details in the next section). Finally, the principal goal of our project is to enable the human-computer interaction for the training process and that way we expect the computer to develop a more human-like musical skill.
+There have been different approaches for solving the musical composition problem including Evolutionary Algorithms, Markov Chains, Neural Networks and Reinforcement Learning, each of them have contributed in analyzing and trying to automate musical composition.
+
+The first approach analyzed for making this project was the one by \citeauthor{deeprl2016music} They proposed the usage of multiple deep Q-networks to store the value for taking a possible action from a state and the usage of Deep Reinforcement Learning for keep improving those melodies. In their approach, they will start with an initial Neural Network which is trained from a sequence of melodies. On the other hand, they will create an additional reward function based on music theory, that way, an score will be given to the action taken based on the criteria of music theory. The music theory reward works by making a list of different constraints and a score if that constraint was respected. The sum of all the constraint will be the final reward given by the music theory rules. On top of that, a Deep Reinforcement Algorithm will be used to improve the weights from the Neural Network created from historical data, by using the values from that Neural Network together with the reward given by the music theory rules. That way, their algorithm will have the freedom to create melodies which are based on its experience, but will also take into consideration the different musical rules that will ``ensure'' that their compositions have a pleasant sound. For all the neural networks involved in the training, \emph{Recurrent Neural Networks (RNN)} were used \cite{deeprl2016music}. 
+
+The usage of \emph{RNN}s for the musical composition problem has been corroborated by \citeauthor{eck2002blues}, specifically with the usage of \emph{Long Short Term Memory (LSTM)} RRNs. As they mentioned, \emph{LSTM} is able to keep characteristics such as timing and musical structure while training, which was not possible with other type of models. They applied the solution to the \emph{blues} musical genre and obtained pleasant results according to their work \cite{eck2002blues}. Both proposals based their work on optimizing the best note that should follow a previous sequence of notes, which is considered the main goal in the musical composition problem \cite{connectionist1989}. 
+
+Our project differs from these two principal approaches in three aspects. Firstly, the usage of musical theory is completely ignored, since we consider that, even though musical theory can explain why a melody sounds nice, it should not constraint the set of notes that can be used \cite{vilchez2015genetic} \cite{biles2013lessons}. Secondly, we will try to introduce a novel data structure which is based on the note's grades instead of storing a note itself (more details in the next section). Finally, the principal goal of our project is to enable the human-computer interaction for the training process and that way we expect the computer to develop a more human-like musical skill. This is considered a vital point of the project, because the quality of the composition depends on each person's musical taste, because of that, by allowing the user to measure the quality of the generated compositions, the algorithm will learn how to play according the user's musical preferences.
