--- a/docs/report/fvilchez.tex
+++ b/docs/report/fvilchez.tex
@@ -5,7 +5,18 @@
 \usepackage{hypcap} 
 \usepackage{graphicx}
 \usepackage[margin=1.3in]{geometry}
+\usepackage{musixtex}
+\usepackage{listings}
 
+
+\lstdefinestyle{mybashcode}{
+  basicstyle=\linespread{0.8}\scriptsize\ttfamily,
+  postbreak=\space,
+  captionpos=b,
+  aboveskip=15pt,
+  abovecaptionskip=8pt,
+  % belowcaptionskip=0pt
+}
 
 \graphicspath{ {Figures/} }
 
