adding link with musixtex documentation

--- a/docs/report/Sections/Approach.tex
+++ b/docs/report/Sections/Approach.tex
@@ -1,3 +1,6 @@
+% Music Latex Library used:
+% https://mirrors.rit.edu/CTAN/macros/musixtex/doc/musixdoc.pdf
+
 As mentioned before, \emph{Q-learning} and \emph{Deep Q-learning} were applied in this project, each of them getting different results. In the next sections we will describe each of the components of our Reinforcement Learning algorithm applied to the Musical composition environment. Additionally, we will detail the constraints applied, at the time of writing this reports, that were used in the project in order to reduce its scope.
 
 \subsection*{State}
